@@ -61,10 +61,14 @@ namespace simuPOP
 	class selector: public Operator
 	{
 		public:
-			/// constructor. default to be always active.
-			selector( int stage=PreMating, int begin=0, int end=-1, int step=1, vectorl at=vectorl(),
+			/// constructor
+			/**
+				\param subPop a shortcut to subPops=[subPop]
+				\param subPops subpopulations this operator can apply to. Default to all.
+			*/
+			selector(const vectoru & subPops=vectoru(), int stage=PreMating, int begin=0, int end=-1, int step=1, vectorl at=vectorl(),
 				int rep=REP_ALL, int grp=GRP_ALL, const vectorstr& infoFields=vectorstr(1, "fitness"))
-				:Operator("","",stage, begin, end, step, at, rep, grp, infoFields)
+				:Operator("","",stage, begin, end, step, at, rep, grp, infoFields), m_subPops(subPops)
 			{
 			}
 
@@ -93,6 +97,8 @@ namespace simuPOP
 			{
 				return "<simuPOP::selector>" ;
 			}
+		private:
+			vectoru m_subPops;
 	};
 
 	/** \brief selection according to genotype at one locus
@@ -114,10 +120,10 @@ namespace simuPOP
 			\param output and other parameters please refer to help(baseOperator.__init__)
 			*/
 			mapSelector( vectoru loci, const strDict& fitness, bool phase=false,
-				int stage=PreMating, int begin=0, int end=-1, int step=1,
+				const vectoru & subPops=vectoru(), int stage=PreMating, int begin=0, int end=-1, int step=1,
 				vectorl at=vectorl(), int rep=REP_ALL, int grp=GRP_ALL,
 				const vectorstr& infoFields=vectorstr(1, "fitness")):
-			selector(stage, begin, end, step, at, rep, grp, infoFields),
+			selector(subPops, stage, begin, end, step, at, rep, grp, infoFields),
 				m_loci(loci), m_dict(fitness), m_phase(phase)
 			{
 			};
@@ -178,10 +184,10 @@ namespace simuPOP
 			\param output and other parameters please refer to help(baseOperator.__init__)
 			*/
 			maSelector( vectoru loci, const vectorf& fitness, const vectora& wildtype,
-				int stage=PreMating, int begin=0, int end=-1, int step=1,
+				const vectoru & subPops=vectoru(), int stage=PreMating, int begin=0, int end=-1, int step=1,
 				vectorl at=vectorl(), int rep=REP_ALL, int grp=GRP_ALL,
 				const vectorstr& infoFields=vectorstr(1, "fitness")):
-			selector(stage, begin, end, step, at, rep, grp, infoFields),
+			selector(subPops, stage, begin, end, step, at, rep, grp, infoFields),
 				m_loci(loci), m_fitness(fitness), m_wildtype(wildtype)
 			{
 				DBG_ASSERT( m_fitness.size() == static_cast<UINT>(pow(static_cast<double>(3),
@@ -242,10 +248,10 @@ namespace simuPOP
 			\param selectors a list of selectors.
 			*/
 			mlSelector( const vectorop selectors, int mode = SEL_Multiplicative,
-				int stage=PreMating, int begin=0, int end=-1, int step=1,
+				const vectoru & subPops=vectoru(), int stage=PreMating, int begin=0, int end=-1, int step=1,
 				vectorl at=vectorl(), int rep=REP_ALL, int grp=GRP_ALL,
 				const vectorstr& infoFields=vectorstr(1, "fitness")):
-			selector(stage, begin, end, step, at, rep, grp, infoFields),
+			selector(subPops, stage, begin, end, step, at, rep, grp, infoFields),
 				m_selectors(0), m_mode(mode)
 			{
 				DBG_FAILIF( selectors.empty(), ValueError, "Please specify at least one selector.");
@@ -301,11 +307,11 @@ namespace simuPOP
 			\param output and other parameters please refer to help(baseOperator.__init__)
 			*/
 			/// provide locus and fitness for 11, 12, 13 (in the form of dictionary)
-			pySelector( vectoru loci, PyObject* func,
+			pySelector( vectoru loci, PyObject* func, const vectoru & subPops=vectoru(), 
 				int stage=PreMating, int begin=0, int end=-1, int step=1,
 				vectorl at=vectorl(), int rep=REP_ALL, int grp=GRP_ALL,
 				const vectorstr& infoFields=vectorstr(1, "fitness")):
-			selector(stage, begin, end, step, at, rep, grp, infoFields),
+			selector(subPops, stage, begin, end, step, at, rep, grp, infoFields),
 				m_loci(loci), m_alleles(0), m_len(0), m_numArray(NULL)
 			{
 				if( !PyCallable_Check(func))
