@@ -4,6 +4,8 @@ BUGS:
   - all known bugs have been cleared.
 
 version 0.8.0 - Not released, available at https://svn.sourceforge.net/svnroot/simupop/trunk
+  - NEW: add subPop(s) parameters to selectors, allowing different selection pressure 
+		in different subpopulations
 
 version 0.7.10 - (Rev 987) May 20, 2007
   - BUG: fix a memory leak bug with LoadPopulation
